# robomaker

./: README.md
robot_ws/src/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/robot_app/launch/: rotate.launch
robot_ws/src/robot_app/scripts/: rotate.py
simulation_ws/src/: CMakeLists.txt  package.xml
simulation_ws/src/simulation_app/launch/: example.launch  spawn_turtlebot.launch
simulation_ws/src/simulation_app/worlds/: example.world
